# server

./: README.md  erl_crash.dump
client/: run_client.sh  run_with_retry.sh
client/src/: main.rs  systems.rs  udp_network.rs
server/: mix.exs
server/lib/simple_server/: application.ex  game_server.ex  game_supervisor.ex  udp_server.ex
simple_server/lib/simple_server/: application.ex  udp_server.ex  websocket_handler.ex
simple_server/priv/: index.html
splatoon_client/: Cargo.toml
splatoon_client/src/: components.rs  main.rs  network.rs  network_system.rs  resources.rs  udp_network.rs
splatoon_server/: mix.exs
splatoon_server/config/: config.exs  dev.exs
splatoon_server/lib/: splatoon_server_web.ex
splatoon_server/lib/splatoon_server/: application.ex  game_server.ex  game_supervisor.ex
splatoon_server/lib/splatoon_server_web/: endpoint.ex  gettext.ex  router.ex
splatoon_server/lib/splatoon_server_web/channels/: game_channel.ex  user_socket.ex
splatoon_server/lib/splatoon_server_web/views/: error_helpers.ex  error_view.ex
